# botriser

./: .gitignore  README.md  keep_alive.py  main.py  pyproject.toml
cogs/: misc.py  mod.py  utility.py
