[tool.poetry]
name = "bot-riser"
version = "0.1.0"
description = ""
authors = ["CubeRiser <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
nextcord = "^2.0.0-alpha.3"
Flask = "^2.0.2"
"randomstuff.py" = "^2.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
